--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="энтониуильям medicalmedium russia медикал медиум anishapo translate сок сельдерея ukraine спасение печени едаменяющая жизнь liver rescue book">
-    <meta name="keywords" content="энтониуильям medicalmedium russia медикал медиум anishapo translate сок сельдерея ukraine спасение печени едаменяющая жизнь liver rescue book" />
+    <meta name="description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine медикалмедиум тенерифе tenerife зожбалдеж">
+    <meta name="keywords" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine медикалмедиум тенерифе tenerife зожбалдеж" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="энтониуильям medicalmedium russia медикал медиум anishapo translate сок сельдерея ukraine спасение печени едаменяющая жизнь liver rescue book" />
+    <meta property="og:description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine медикалмедиум тенерифе tenerife зожбалдеж" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -79,14 +79,6 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="энтониуильям">
-									<a href="./tags/./entoniuil-yam.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
-										<div class="stories__slide-txt" style="">энтониуильям</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="medicalmedium russia">
 									<a href="./tags/./medicalmedium-russia.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-russia.png);"></div>
@@ -95,10 +87,18 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="медикал медиум">
-									<a href="./tags/./medikal-medium.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medikal-medium.png);"></div>
-										<div class="stories__slide-txt" style="">медикал медиум</div>
+								<div class="stories__slide" title="энтониуильям">
+									<a href="./tags/./entoniuil-yam.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
+										<div class="stories__slide-txt" style="">энтониуильям</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo healingfood">
+									<a href="./tags/./anishapo-healingfood.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo healingfood</div>
 									</a>
 								</div>
 							</div>
@@ -107,14 +107,6 @@
 									<a href="./tags/./anishapo-translate.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-translate.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo translate</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="сок сельдерея">
-									<a href="./tags/./sok-sel-dereya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sok-sel-dereya.png);"></div>
-										<div class="stories__slide-txt" style="">сок сельдерея</div>
 									</a>
 								</div>
 							</div>
@@ -131,190 +123,6 @@
 									<a href="./tags/./medicalmedium.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium.png);"></div>
 										<div class="stories__slide-txt" style="">medicalmedium</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="спасение печени">
-									<a href="./tags/./spasenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/spasenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">спасение печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="едаменяющая жизнь">
-									<a href="./tags/./edamenyayushchaya-zhizn-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/edamenyayushchaya-zhizn-.png);"></div>
-										<div class="stories__slide-txt" style="">едаменяющая жизнь</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="liver rescue book">
-									<a href="./tags/./liver-rescue-book.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/liver-rescue-book.png);"></div>
-										<div class="stories__slide-txt" style="">liver rescue book</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="очищение печени">
-									<a href="./tags/./ochishchenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ochishchenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">очищение печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="чистка печени">
-									<a href="./tags/./chistka-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/chistka-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">чистка печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="спасение печени 369">
-									<a href="./tags/./spasenie-pecheni-369.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/spasenie-pecheni-369.png);"></div>
-										<div class="stories__slide-txt" style="">спасение печени 369</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo healingfood">
-									<a href="./tags/./anishapo-healingfood.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo healingfood</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="сельдереев ыйсок">
-									<a href="./tags/./sel-dereev-yysok.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sel-dereev-yysok.png);"></div>
-										<div class="stories__slide-txt" style="">сельдереев ыйсок</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="liver rescue">
-									<a href="./tags/./liver-rescue.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/liver-rescue.png);"></div>
-										<div class="stories__slide-txt" style="">liver rescue</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="celery juice">
-									<a href="./tags/./celery-juice.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/celery-juice.png);"></div>
-										<div class="stories__slide-txt" style="">celery juice</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="детокс">
-									<a href="./tags/./detoks.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/detoks.png);"></div>
-										<div class="stories__slide-txt" style="">детокс</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="исце ление печени">
-									<a href="./tags/./istse-lenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/istse-lenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">исце ление печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo celery">
-									<a href="./tags/./anishapo-celery.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-celery.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo celery</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="живаяеда">
-									<a href="./tags/./zhivayaeda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhivayaeda.png);"></div>
-										<div class="stories__slide-txt" style="">живаяеда</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="сок сельдерея каждый день">
-									<a href="./tags/./sok-sel-dereya-kazhdyy-den-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sok-sel-dereya-kazhdyy-den-.png);"></div>
-										<div class="stories__slide-txt" style="">сок сельдерея каждый день</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="здоровье печени">
-									<a href="./tags/./zdorov-e-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zdorov-e-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">здоровье печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="думайчтокладешьврот">
-									<a href="./tags/./dumaychtokladesh-vrot.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/dumaychtokladesh-vrot.png);"></div>
-										<div class="stories__slide-txt" style="">думайчтокладешьврот</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo 369">
-									<a href="./tags/./anishapo-369.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-369.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo 369</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo утрен ний ритуал">
-									<a href="./tags/./anishapo-utren-niy-ritual.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-utren-niy-ritual.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo утрен ний ритуал</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="книга спасение печени">
-									<a href="./tags/./kniga-spasenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/kniga-spasenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">книга спасение печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="зло для печени">
-									<a href="./tags/./zlo-dlya-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zlo-dlya-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">зло для печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="369 очищение печени">
-									<a href="./tags/./369-ochishchenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/369-ochishchenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">369 очищение печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="живая вода">
-									<a href="./tags/./zhivaya-voda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhivaya-voda.png);"></div>
-										<div class="stories__slide-txt" style="">живая вода</div>
 									</a>
 								</div>
 							</div>
