--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine медикалмедиум тенерифе tenerife зожбалдеж">
-    <meta name="keywords" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine медикалмедиум тенерифе tenerife зожбалдеж" />
+    <meta name="description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж">
+    <meta name="keywords" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine медикалмедиум тенерифе tenerife зожбалдеж" />
+    <meta property="og:description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -152,7 +152,7 @@
 
 
 						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=RcFbRNW2VMkAX-ZL9Kg&oh=355d6eb6e9eed58c2539c44b80a48806&oe=5EA58585" alt="">
+							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=jFJak4M_0xoAX-DIMEy&oh=ad1c3d51a06f566e6b346997b9e5233a&oe=5E8FE28A" alt="">
 							</img></center>
 						</div>
 
