--- a/stories.html
+++ b/stories.html
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="zachem-est--zelen--redisa" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=jFJak4M_0xoAX-DIMEy&oh=ad1c3d51a06f566e6b346997b9e5233a&oe=5E8FE28A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="efirnoe-maslo-tim-yana" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=RcFbRNW2VMkAX-ZL9Kg&oh=355d6eb6e9eed58c2539c44b80a48806&oe=5EA58585" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=4MVs46jhItgAX__OhfU&oh=232ceb7570343c9d09e4a96cf0c51091&oe=5EA58585" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="vodaxchay-s-tim-yanom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=CZOUroD7zqwAX9OBhnK&oh=d22f6d1d885d783bbf8163320f63df7e&oe=5EA4C91E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Z0b8pjxg80MAX9oJ2gX&oh=a0e12075836087f52d72728d471ae204&oe=5EA4C91E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="tim-yan---dushistyy-antivirus" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=2P9JYHNoX2sAX9Ldj7P&oh=834102881a7b7942cb1a7cdd651ddd7c&oe=5EAD51A9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=u6tESG7D4fkAX-UabEA&oh=d9af797aa85c1a15ad3a6cb91eab2fe3&oe=5EAD51A9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=er80JJpZJScAX-18hTS&oh=764ceca1a7d84a17466c0bf435b2b503&oe=5E1680D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=er80JJpZJScAX-18hTS&oh=52706cfbcb5e38daa01980fe54205436&oe=5E17D252" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-chaya-iz-khurmy-dlya-lecheniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77110458_588200205080677_5107032566509865313_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=zB9voAO80XUAX-VCgNi&oh=8fd72d99ccfca0d8de5e2b008760808f&oe=5EAE9AE4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77110458_588200205080677_5107032566509865313_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=rBWzVDUOizYAX_LiNHd&oh=6d754bd8b0e61d77007ce7e95899a7c0&oe=5EAE9AE4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ukrop-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80435458_1252978434894673_5953674433393083400_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=GtOyemr4Vy4AX9dOXHZ&oh=d3041c2b56260cc3c4c59fadca2fba83&oe=5EB0298B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="УКРОП 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80435458_1252978434894673_5953674433393083400_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ME3X0er5fBYAX8cidBb&oh=d71863d81ef0c5345b92b149b302b6e1&oe=5EB0298B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="УКРОП 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-my-znaem-o-petrushke" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75576703_623080791779685_500093228300963932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=YfFxzii21CgAX9zF8Wz&oh=0ab5be0973ecc085d71462345cf9f2b7&oe=5EA5A74F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО МЫ ЗНАЕМ О ПЕТРУШКЕ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75576703_623080791779685_500093228300963932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=DgSvnUdm3poAX9A7vcm&oh=6cd14fb7ccfc6da14691ac39af186245&oe=5EA5A74F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО МЫ ЗНАЕМ О ПЕТРУШКЕ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="novogodniy-stol-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76851461_567100334111816_8790846081603229564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=rGCebSWZgFYAX8PLwI7&oh=d7129199977cd063cc18ac0ed5b0aeb9&oe=5E99BEB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВОГОДНИЙ СТОЛ 🎄🥂">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76851461_567100334111816_8790846081603229564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=MkClfjbY0iUAX8kNj1E&oh=d18fc006394469084a5b7d163358ad7f&oe=5E99BEB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВОГОДНИЙ СТОЛ 🎄🥂">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="simptomy-khronicheskogo-obezvozhivaniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=O9XGK-8PIsoAX9aq0Ul&oh=5c0f570a94524ee6c2a1d3434cf5c283&oe=5E16775F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=VgqiFCAsEBkAX-vzuR3&oh=32895f60bf32e7b4d562d8874bb37f9d&oe=5E17C8DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="skol-ko-vody-nuzhno-pit--za-den-" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79498718_102842821157116_5120478440220751382_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ahwwvBRWKFAAX9dEzer&oh=ed8bd41dc33f434e4d5c8010695b4603&oe=5E97EA8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СКОЛЬКО ВОДЫ НУЖНО ПИТЬ ЗА ДЕНЬ?">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xxsfs-s-krutymi-podarkamixx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77363887_2854853351200974_7755056131160465067_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=7L3V-WowITcAX-j0Dug&oh=99c1f8a9b9b500bb65d1989ce65ed69f&oe=5E91FC88" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎁СФС С КРУТЫМИ ПОДАРКАМИ🎁">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
